syntax = "proto3";

package Messages.Battle;

message Operation {
  enum OperationType { // 操作类型，互斥
    IDLE = 0;          // 站立不动
    MOVE = 1;          // 移动
    ATTACK = 2;        // 普攻
    SKILL_1 = 3;       // 技能1
    SKILL_2 = 4;       // 技能2
    SKILL_3 = 5;       // 技能3
  }

  message Direction { // 角色在水平面的方向向量
    float x = 1;      // 从左到右
    float y = 2;      // 从下到上
  }

  OperationType operation_type = 1; // 操作类型

  int32 user_id = 2;        // 用户标识符，唯一
  int32 battle_user_id = 3; // 战斗中用户标识符，战斗中唯一
  int32 frame_id = 4; // 角色执行操作所在的帧，战斗中各角色唯一

  Direction direction = 5; // 角色朝向
}

message BattleUserInfo {
  int32 user_id = 1;
  int32 battle_user_id = 2;
  int32 role_id = 3;
}

message BattleReadyRequest {
  int32 battle_id = 1;
  int32 battle_user_id = 2;
}

message OperationRequest {
  int32 battle_id = 1;
  Operation operation = 2;
}

message DeltaFramesRequest {
  int32 battle_id = 1;
  repeated int32 frames = 2;
}

message GameOverRequest { 
  int32 battle_user_id = 1; 
}

message EnterBattleResponse {
  int32 random_seed = 1;
  int32 battle_id = 2;
  repeated BattleUserInfo battle_user_infos = 3;
}

message BattleStartResponse {}

message OperationsResponse {
  int32 frame_id = 1;
  repeated Operation operations = 2;
}

message DeltaFramesResponse { 
  repeated OperationsResponse delta_frames = 1; 
}

message GameOverResponse {}
