syntax = "proto3";

package Messages.Type;

enum RequestType {
  LOGIN_REQUEST = 0;
  MATCH_REQUEST = 10;
  CANCEL_MATCH_REQUEST = 11;
  BATTLE_READY_REQUEST = 51;
  OPERATION_REQUEST = 53;
  DELTA_FRAMES_REQUEST = 55;
  GAME_OVER_REQUEST = 57;
}

enum ResponseType {
  LOGIN_RESPONSE = 0;
  MATCH_RESPONSE = 10;
  CANCEL_MATCH_RESPONSE = 11;
  ENTER_BATTLE_RESPONSE = 50;
  BATTLE_START_RESPONSE = 51;
  OPERATIONS_RESPONSE = 53;
  DELTA_FRAMES_RESPONSE = 55;
  GAME_OVER_RESPONSE = 57;
}
